--- a/styles/Global.css
+++ b/styles/Global.css
@@ -3,6 +3,10 @@
 }
 .larp-size-menu .ant-menu-item{
     font-size: 16px !important;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.larp-size-menu .ant-menu-item svg{
+    font-size: 18px;
 }
